# personal-assistent-business

./: -  .env  .gitignore  agents.md  check_db_shifts.py  create_db.py  debug_score.py  enable_pgvector.py  pyproject.toml  reset_db.py  seed_db.py  test.py  test_event_structure.py  verify_agents_module.py  verify_api.py  verify_clients.py  verify_embeddings_module.py  verify_employees.py  verify_semantic_search.py  verify_shifts.py  verify_shifts_search.py
docs/: api-updates.md  semantic_search_implementation.md
src/: main.py
src/modules/agents/: models.py  router.py  schemas.py  service.py
src/modules/agents/utils/llm/: call_agent_asnyc.py
src/modules/auth/: security.py
src/modules/clients/: events.py  handlers.py  models.py  router.py  schemas.py  service.py
src/modules/embeddings/: service.py
src/modules/employees/: events.py  handlers.py  models.py  router.py  schemas.py  service.py
src/modules/example/: user_created.py
src/modules/job_shifts/: models.py  router.py  schemas.py  service.py
src/modules/managers/: models.py  router.py  schemas.py  service.py
src/modules/shared/: rates.py
src/modules/shared/domain/: bus.py  event.py
